<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Restore Camera default settings?</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">DONE</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="switch_camera_id">Switch Camera</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">5</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_720p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD</string>
    <string name="pref_video_quality_entry_qcif" translatable="false">QCIF</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1000" translatable="false">1s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1500" translatable="false">1.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2000" translatable="false">2s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2500" translatable="false">2.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_3000" translatable="false">3s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_5000" translatable="false">5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10000" translatable="false">10s</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_3264x2448">3264x2448</string>
    <string name="pref_camera_picturesize_entry_3248x2436">3248x2436</string>
    <string name="pref_camera_picturesize_entry_2592x1944">2592x1944</string>
    <string name="pref_camera_picturesize_entry_2592x1936">2592x1936</string>
    <string name="pref_camera_picturesize_entry_2048x1536">2048x1536</string>
    <string name="pref_camera_picturesize_entry_1920x1080">1920x1080</string>
    <string name="pref_camera_picturesize_entry_1600x1200">1600x1200</string>
    <string name="pref_camera_picturesize_entry_1392x1392">1392x1392</string>
    <string name="pref_camera_picturesize_entry_1280x960">1280x960</string>
    <string name="pref_camera_picturesize_entry_1280x720">1280x720</string>
    <string name="pref_camera_picturesize_entry_1024x768">1024x768</string>
    <string name="pref_camera_picturesize_entry_800x480">800x480</string>
    <string name="pref_camera_picturesize_entry_720x480">720x480</string>
    <string name="pref_camera_picturesize_entry_640x480">640x480</string>
    <string name="pref_camera_picturesize_entry_320x240">320x240</string>
    <string name="pref_camera_isovalue_default" translatable="false">auto</string>
    <string name="pref_camera_isovalue_title">ISO</string>
    <string name="pref_camera_isovalue_entry_auto">Auto</string>
    <string name="pref_camera_isovalue_entry_50">50</string>
    <string name="pref_camera_isovalue_entry_100">100</string>
    <string name="pref_camera_isovalue_entry_200">200</string>
    <string name="pref_camera_isovalue_entry_400">400</string>
    <string name="pref_camera_isovalue_entry_800">800</string>
    <string name="pref_camera_isovalue_entry_1600">1600</string>
    <string name="pref_camera_effect_default" translatable="false">none</string>
    <string name="pref_camera_effect_title">Effect</string>
    <string name="pref_camera_effect_entry_none">None</string>
    <string name="pref_camera_effect_entry_mono">Mono</string>
    <string name="pref_camera_effect_entry_sepia">Sepia</string>
    <string name="pref_camera_effect_entry_negative">Negative</string>
    <string name="pref_camera_metering_default" translatable="false">center</string>
    <string name="pref_camera_metering_title">Metering</string>
    <string name="pref_camera_metering_entry_center">Center</string>
    <string name="pref_camera_metering_entry_spot">Spot</string>
    <string name="pref_camera_metering_entry_matrix">Matrix</string>
    <string name="pref_camera_antibanding_default" translatable="false">off</string>
    <string name="pref_camera_antibanding_title">Anti banding</string>
    <string name="pref_camera_antibanding_entry_off">OFF</string>
    <string name="pref_camera_antibanding_entry_auto">Auto</string>
    <string name="pref_camera_antibanding_entry_50hz">50Hz</string>
    <string name="pref_camera_antibanding_entry_60hz">60Hz</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_contrast_default" translatable="false">0</string>
    <string name="pref_camera_contrast_entry_plus2">+2</string>
    <string name="pref_camera_contrast_entry_plus1">+1</string>
    <string name="pref_camera_contrast_entry_zero">0</string>
    <string name="pref_camera_contrast_entry_minus1">-1</string>
    <string name="pref_camera_contrast_entry_minus2">-2</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_saturation_default" translatable="false">0</string>
    <string name="pref_camera_saturation_entry_plus2">+2</string>
    <string name="pref_camera_saturation_entry_plus1">+1</string>
    <string name="pref_camera_saturation_entry_zero">0</string>
    <string name="pref_camera_saturation_entry_minus1">-1</string>
    <string name="pref_camera_saturation_entry_minus2">-2</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_sharpness_default" translatable="false">0</string>
    <string name="pref_camera_sharpness_entry_plus2">+2</string>
    <string name="pref_camera_sharpness_entry_plus1">+1</string>
    <string name="pref_camera_sharpness_entry_zero">0</string>
    <string name="pref_camera_sharpness_entry_minus1">-1</string>
    <string name="pref_camera_sharpness_entry_minus2">-2</string>
    <string name="pref_camera_hue_title">Hue</string>
    <string name="pref_camera_hue_default" translatable="false">0</string>
    <string name="pref_camera_hue_entry_plus2">+2</string>
    <string name="pref_camera_hue_entry_plus1">+1</string>
    <string name="pref_camera_hue_entry_zero">0</string>
    <string name="pref_camera_hue_entry_minus1">-1</string>
    <string name="pref_camera_hue_entry_minus2">-2</string>
    <string name="pref_camera_wdr_title">WDR</string>
    <string name="pref_camera_wdr_default" translatable="false">0</string>
    <string name="pref_camera_wdr_entry_off">Off</string>
    <string name="pref_camera_wdr_entry_on">On</string>
    <string name="pref_camera_jpeg_qual_title">JPEG quality</string>
    <string name="pref_camera_jpeg_qual_default" translatable="false">90</string>
    <string name="pref_camera_jpeg_qual_entry_superfine">Superfine</string>
    <string name="pref_camera_jpeg_qual_entry_fine">Fine</string>
    <string name="pref_camera_jpeg_qual_entry_normal">Normal</string>
    <string name="pref_camera_ae_lock_title">AE Lock</string>
    <string name="pref_camera_ae_lock_default" translatable="false">0</string>
    <string name="pref_camera_ae_lock_entry_off">OFF</string>
    <string name="pref_camera_ae_lock_entry_on">ON</string>
    <string name="pref_camera_awb_lock_title">AWB Lock</string>
    <string name="pref_camera_awb_lock_default" translatable="false">0</string>
    <string name="pref_camera_awb_lock_entry_off">OFF</string>
    <string name="pref_camera_awb_lock_entry_on">ON</string>
    <string name="pref_camera_focusmode_default" translatable="false">continuous-picture</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_entry_continuous">Continuous</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_brightness_title">Brightness</string>
    <string name="pref_brightness_default" translatable="false">0</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default" translatable="false">0</string>
</resources>