<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceGroup
        xmlns:camera="http://schemas.android.com/apk/res/com.android.camera"
        camera:title="@string/pref_camera_settings_category">
    <IconListPreference
            camera:key="pref_camera_flashmode_key"
            camera:defaultValue="@string/pref_camera_flashmode_default"
            camera:title="@string/pref_camera_flashmode_title"
            camera:icons="@array/camera_flashmode_icons"
            camera:largeIcons="@array/camera_flashmode_largeicons"
            camera:entries="@array/pref_camera_flashmode_entries"
            camera:entryValues="@array/pref_camera_flashmode_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_exposure_key"
            camera:defaultValue="@string/pref_exposure_default"
            camera:title="@string/pref_exposure_title"
            camera:singleIcon="@drawable/ic_exposure_holo_light" />
    <IconListPreference
            camera:key="pref_camera_scenemode_key"
            camera:defaultValue="@string/pref_camera_scenemode_default"
            camera:title="@string/pref_camera_scenemode_title"
            camera:singleIcon="@drawable/ic_scn_holo_light"
            camera:entries="@array/pref_camera_scenemode_entries"
            camera:entryValues="@array/pref_camera_scenemode_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_whitebalance_key"
            camera:defaultValue="@string/pref_camera_whitebalance_default"
            camera:title="@string/pref_camera_whitebalance_title"
            camera:icons="@array/whitebalance_icons"
            camera:largeIcons="@array/whitebalance_largeicons"
            camera:entries="@array/pref_camera_whitebalance_entries"
            camera:entryValues="@array/pref_camera_whitebalance_entryvalues" />
    <RecordLocationPreference
            camera:key="pref_camera_recordlocation_key"
            camera:defaultValue="@string/pref_camera_recordlocation_default"
            camera:title="@string/pref_camera_recordlocation_title"
            camera:icons="@array/camera_recordlocation_icons"
            camera:largeIcons="@array/camera_recordlocation_largeicons"
            camera:entries="@array/pref_camera_recordlocation_entries"
            camera:entryValues="@array/pref_camera_recordlocation_entryvalues" />
    <ListPreference
            camera:key="pref_camera_picturesize_key"
            camera:title="@string/pref_camera_picturesize_title"
            camera:entries="@array/pref_camera_picturesize_entries"
            camera:entryValues="@array/pref_camera_picturesize_entryvalues" />
    <ListPreference
            camera:key="pref_camera_focusmode_key"
            camera:defaultValue="@array/pref_camera_focusmode_default_array"
            camera:title="@string/pref_camera_focusmode_title"
            camera:entries="@array/pref_camera_focusmode_entries"
            camera:entryValues="@array/pref_camera_focusmode_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_id_key"
            camera:defaultValue="@string/pref_camera_id_default"
            camera:title="@string/pref_camera_id_title"
            camera:icons="@array/camera_id_icons"
            camera:entries="@array/camera_id_entries"
            camera:largeIcons="@array/camera_id_largeicons" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_isovalue_key"
            camera:defaultValue="@string/pref_camera_isovalue_default"
            camera:title="@string/pref_camera_isovalue_title"
            camera:entries="@array/pref_camera_isovalue_entries"
            camera:entryValues="@array/pref_camera_isovalue_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_effect_key"
            camera:defaultValue="@string/pref_camera_effect_default"
            camera:title="@string/pref_camera_effect_title"
            camera:entries="@array/pref_camera_effect_entries"
            camera:entryValues="@array/pref_camera_effect_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_brightness_key"
            camera:defaultValue="@string/pref_brightness_default"
            camera:title="@string/pref_brightness_title"
            camera:entries="@array/pref_brightness_entries"
            camera:entryValues="@array/pref_brightness_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_metering_key"
            camera:defaultValue="@string/pref_camera_metering_default"
            camera:title="@string/pref_camera_metering_title"
            camera:entries="@array/pref_camera_metering_entries"
            camera:entryValues="@array/pref_camera_metering_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_antibanding_key"
            camera:defaultValue="@string/pref_camera_antibanding_default"
            camera:title="@string/pref_camera_antibanding_title"
            camera:entries="@array/pref_camera_antibanding_entries"
            camera:entryValues="@array/pref_camera_antibanding_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_contrast_key"
            camera:defaultValue="@string/pref_camera_contrast_default"
            camera:title="@string/pref_camera_contrast_title"
            camera:entries="@array/pref_camera_contrast_entries"
            camera:entryValues="@array/pref_camera_contrast_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_saturation_key"
            camera:defaultValue="@string/pref_camera_saturation_default"
            camera:title="@string/pref_camera_saturation_title"
            camera:entries="@array/pref_camera_saturation_entries"
            camera:entryValues="@array/pref_camera_saturation_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_sharpness_key"
            camera:defaultValue="@string/pref_camera_sharpness_default"
            camera:title="@string/pref_camera_sharpness_title"
            camera:entries="@array/pref_camera_sharpness_entries"
            camera:entryValues="@array/pref_camera_sharpness_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_hue_key"
            camera:defaultValue="@string/pref_camera_hue_default"
            camera:title="@string/pref_camera_hue_title"
            camera:entries="@array/pref_camera_hue_entries"
            camera:entryValues="@array/pref_camera_hue_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_wdr_key"
            camera:defaultValue="@string/pref_camera_wdr_default"
            camera:title="@string/pref_camera_wdr_title"
            camera:entries="@array/pref_camera_wdr_entries"
            camera:entryValues="@array/pref_camera_wdr_entryvalues" />
    <!-- by wk.m -->
    <ListPreference
            camera:key="pref_camera_jpeg_qual_key"
            camera:defaultValue="@string/pref_camera_jpeg_qual_default"
            camera:title="@string/pref_camera_jpeg_qual_title"
            camera:entries="@array/pref_camera_jpeg_qual_entries"
            camera:entryValues="@array/pref_camera_jpeg_qual_entryvalues" />
    <!-- by hm choi -->
    <ListPreference
            camera:key="pref_camera_ae_lock_key"
            camera:defaultValue="@string/pref_camera_ae_lock_default"
            camera:title="@string/pref_camera_ae_lock_title"
            camera:entries="@array/pref_camera_ae_lock_entries"
            camera:entryValues="@array/pref_camera_ae_lock_entryvalues" />
    <!-- by hm choi -->
    <ListPreference
            camera:key="pref_camera_awb_lock_key"
            camera:defaultValue="@string/pref_camera_awb_lock_default"
            camera:title="@string/pref_camera_awb_lock_title"
            camera:entries="@array/pref_camera_awb_lock_entries"
            camera:entryValues="@array/pref_camera_awb_lock_entryvalues" />
</PreferenceGroup>
